# inspector-vehicle

./: .gitignore
experimental/untitled1/: CMakeLists.txt  KeyEnterReceiver.cpp  KeyEnterReceiver.h  MainWindow.cpp  MainWindow.h  keyEnterReceiver.cpp  keyEnterReceiver.h  main.cpp
nucleo-h723zg/: .gitignore  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  DESIGN_PATTERNS.md  HARDWARE_NOTES.md  README.md  RTOS_DESIGN.md  STM32H723ZGTx_FLASH.ld  TIMING_CONSIDERATIONS.md  decode_crash.sh  openocd.cfg
nucleo-h723zg/.github/: copilot-instructions.md
nucleo-h723zg/cmake/: stm32_toolchain.cmake
nucleo-h723zg/mocks/: FreeRTOS.h  mock_impl.cpp  portmacro.h  semphr.h  stm32h7xx_hal.h  stm32h7xx_hal_uart.h  task.h
nucleo-h723zg/src/: BlinkyFreeRTOSTask.cpp  BlinkyFreeRTOSTask.h  CrashHandler.cpp  CrashHandler.h  FreeRTOSConfig.h  isr_handlers.cpp  main.cpp  stm32h7xx_hal_conf.h
nucleo-h723zg/src/freetos/: FreeRTOSConfig.h  FreeTOSTask.cpp  FreeTOSTask.h
nucleo-h723zg/src/gpio/: GpioBase.cpp  GpioBase.h  GpioInput.cpp  GpioInput.h  GpioOutput.cpp  GpioOutput.h
nucleo-h723zg/src/host_command_handler/: DistanceReadRequestCommand.h  HostCommandHandlerFreeTOSTask.cpp  HostCommandHandlerFreeTOSTask.h  HostCommeds.h  ReceiveCommand.cpp  ReceiveCommand.h  VelocityCommand.cpp  VelocityCommand.h
nucleo-h723zg/src/motors/: ControllerFreeTOSTask.cpp  ControllerFreeTOSTask.h  DataSampleTimer.cpp  DataSampleTimer.h  Encoder.cpp  Encoder.h  MotorDriver.cpp  MotorDriver.h  MotorPinConfig.h  PiMotorControl.cpp  PiMotorControl.h  TelemetryTask.cpp  TelemetryTask.h  TransposedIIRFilter.cpp  TransposedIIRFilter.h  VehicleParameters.h
nucleo-h723zg/src/pwm/: PwmOutput.cpp  PwmOutput.h
nucleo-h723zg/src/timer/: HardwareTimer.cpp  HardwareTimer.h
nucleo-h723zg/src/uart/: Receiver.h  Transceiver.h  TransceiverError.h  Transmitter.h  Uart.cpp  Uart.h  UartLineReceiver.cpp  UartLineReceiver.h  UartTransceiver.cpp  UartTransceiver.h
nucleo-h723zg/src/utils/: CALC_CONSIDERATIONS.md  DwtTimer.h  EncoderMath.h  StringUtils.h
nucleo-h723zg/tests/: CMakeLists.txt
nucleo-h723zg/tests/integration/: SerialInterface2.cpp  SerialInterface2.h  test_vel_command.cpp
nucleo-h723zg/tests/unit/: test_BlinkyFreeRTOSTask.cpp  test_EncoderMath.cpp  test_HostCommandInterface.cpp  test_StringUtils.cpp  test_UartLogger.cpp
ros2_ws/src/robotvehicle2_package/: CMakeLists.txt  package.xml
ros2_ws/src/robotvehicle2_package/src/: Configurations.h.in  DiffDriveBaseNode.cpp  DiffDriveBaseNode.h  TaskManagerNode.cpp  TaskManagerNode.h  controller_node.cpp  task_manager_node.cpp
ros2_ws/src/robotvehicle2_package/src/BehaviourTree/: GoalReachedNode.h  IdleNode.h  NavState.h  NavigateNode.h
ros2_ws/src/robotvehicle2_package/src/Estimation/: CMakeLists.txt  Odom.cpp  Odom.h
ros2_ws/src/robotvehicle2_package/src/Host/: DriverInterface.cpp
ros2_ws/src/robotvehicle2_package/src/Resources/: GridMap.txt
ros2_ws/src/robotvehicle2_package/src/Utilities/: AwaitTimer.cpp  CMakeLists.txt  MathConversions.h  MatrixHelper.cpp  MatrixHelper.h  SerialInterface.cpp  SerialInterface.h  String.cpp  UsbSerial.cpp
ros2_ws/src/robotvehicle2_package/test/Host/: HostSystemTest.cpp
ros2_ws/src/robotvehicle2_package/test/Resources/: MapLines.txt
ros2_ws/src/robotvehicle2_package/test/TestUtilities/: CMakeLists.txt  SerialInterfaceStub.h
ros2_ws/src/robotvehicle2_package/test/Utilities/: StringUnitTest.cpp
ros2_ws/src/robotvehicle_package/: CMakeLists.txt  package.xml  test_header.h.in
ros2_ws/src/robotvehicle_package/FeatureExtraction/: CMakeLists.txt  Incremental.cpp
ros2_ws/src/robotvehicle_package/Test/Host/: HostSystemTest.cpp
ros2_ws/src/robotvehicle_package/launch/: launch_vehicle_robot.py
ros2_ws/src/robotvehicle_package/src/: AwaitTimer.cpp  AwaitTimer.h  CollinearLines.cpp  CollinearLines.h  Configurations.h  Configurations.h.in  ControllerNode.cpp  ControllerNode.h  DiffDriveBaseNode.cpp  DiffDriveBaseNode.h  LaserScanPoint.cpp  LaserScanPoint.h  MissionController.cpp  MissionController.h  OdomRangeLog.cpp  OdomRangeLog.h  OneScanTestFile.txt  SerialInterface.cpp  TestKalmanFilterOffLine.cpp  TestKalmanFilterOffLine.h  UsbSerial.cpp  UsbSerial.h  compareData.txt  controller_node.cpp  laserscansub_node.cpp  publisher_joystick_node.cpp
ros2_ws/src/robotvehicle_package/src/Host/: CMakeLists.txt  DriverInterface.cpp  DriverInterface.h
ros2_ws/src/robotvehicle_package/src/Localization/: BatchGradientDecent.cpp  BatchGradientDecent.h  CMakeLists.txt  Estimation.cpp  Estimation.h  HStack.cpp  HStack.h  Incremental.cpp  Incremental.h  KalmanFilter.cpp  KalmanFilter.h  KalmanLocalization.cpp  KalmanLocalization.h  Line.cpp  Line.h  LineStack.cpp  LineStack.h  Lines.cpp  Lines.h  Matches.cpp  Matches.h  Matching.cpp  Matching.h  MeasurementPrediction.cpp  MeasurementPrediction.h  Observations.cpp  Observations.h  Odom.cpp  Odom.h  Pose.cpp  Pose.h  PredictionDifferentialDrive.cpp  PredictionDifferentialDrive.h  RStack.cpp  RStack.h  SensorRecorder.cpp  SensorRecorder.h  TestMap.cpp  TestMap.h
ros2_ws/src/robotvehicle_package/src/Navigation/: CMakeLists.txt  MotionController.cpp  MotionController.h  NavigationExceptionDestinationBlocked.cpp  NavigationExceptionDestinationBlocked.h  NavigationExceptionNoPathPoints.cpp  NavigationExceptionNoPathPoints.h  NavigationExceptionPathPointAlreadyCompleted.cpp  NavigationExceptionPathPointAlreadyCompleted.h  NavigationPath.cpp  NavigationPath.h  NavigationPoint.cpp  NavigationPoint.h  Navigator.cpp  Navigator.h
ros2_ws/src/robotvehicle_package/src/PathPlanning/: AStar.cpp  AStar.h  AStar2.cpp  AStar2.h  CMakeLists.txt  CirclePoints.cpp  CirclePoints.h  Dijkstra.cpp  Dijkstra.h  GridMap.cpp  GridMap.h  LinePoints.cpp  LinePoints.h  Node.cpp  Node.h  NodeQueue.cpp  NodeQueue.h  (+12 more)
ros2_ws/src/robotvehicle_package/test/: TestConfigurations.h.in
ros2_ws/src/test_ros2_project/: CMakeLists.txt  package.xml
ros2_ws/src/test_ros2_project/src/: ClassToTest.cpp  ClassToTest.h  publisher_member_function.cpp
ros2_ws/src/test_ros2_project/test/: tutorial_test.cpp
(+396 files in other folders)
